# src/Archetypical.Software.SchemaRegistry/Controllers/RegistrationController.cs
@@ -1,13 +1,3 @@
-/*
- * Cloud Native Data Schema Registry
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * OpenAPI spec version: 0.1
- *
- * Generated by: https://github.com/swagger-api/swagger-codegen.git
- */
-
 using System;
 using System.Collections.Generic;
 using System.ComponentModel.DataAnnotations;
@@ -23,7 +13,6 @@ using Archetypical.Software.SchemaRegistry.Shared.Data;
 using Archetypical.Software.SchemaRegistry.Shared.Enums;
 using Archetypical.Software.SchemaRegistry.Shared.Interfaces;
 using Archetypical.Software.SchemaRegistry.Shared.Models;
-
 using Microsoft.Extensions.Logging;
 using Swashbuckle.AspNetCore.Annotations;
 
@@ -56,22 +45,22 @@ namespace Archetypical.Software.SchemaRegistry.Controllers
         /// <response code="200">OK</response>
         /// <response code="400">Invalid request</response>
         [HttpPost]
-        [Route("/schemagroups/{groupId}/schemas/{schemaId}")]
+        [Route("/collections/{groupId}/schemas/{schemaId}")]
         [ValidateModelState]
         [SwaggerOperation("CreateSchema")]
         [SwaggerResponse(statusCode: 200, type: typeof(Schema), description: "OK")]
-        public virtual async Task<IActionResult> CreateSchema([FromRoute][Required] string groupId, [FromRoute][Required] Guid schemaId)
+        public virtual async Task<IActionResult> CreateSchema([FromRoute][Required] Guid groupId, [FromRoute][Required] Guid schemaId)
         {
             // Get the schema group
 
             if (!ModelState.IsValid)
                 return ValidationProblem(ModelState);
 
-            var gr = _context.SchemaGroups.FirstOrDefault(x => x.Id == groupId);
+            var gr = _context.Schemas.FirstOrDefault(x => x.Id == groupId);
             if (gr == null)
                 return NotFound();
 
-            var schemas = _context.Schemata.Where(x => x.SchemaGroupId == groupId).ToList()
+            var schemas = _context.Versions.Where(x => x.SchemaGroupId == groupId).ToList()
                 .Select(child => new InnerProjection { Format = gr.Format, ChildFormat = child.Format, Version = child.Version, Hash = child.Hash }).ToList();
 
             if (!schemas.Any())
@@ -89,7 +78,7 @@ namespace Archetypical.Software.SchemaRegistry.Controllers
             if (ValidationResult.Success != validation)
                 return Problem(validation.ErrorMessage);
 
-            var schema = new Schema()
+            var schema = new SchemaVersion()
             {
                 Contents = body,
                 CreatedTimeUtc = DateTime.UtcNow,
@@ -107,7 +96,7 @@ namespace Archetypical.Software.SchemaRegistry.Controllers
             if (schema.Hash != latest.Hash)
             {
                 schema.Version = (latest.Version ?? 0) + 1;
-                await _context.Schemata.AddAsync(schema);
+                await _context.Versions.AddAsync(schema);
                 await _context.SaveChangesAsync();
             }
 
